--- a/app/views/home/_landing.html.erb
+++ b/app/views/home/_landing.html.erb
@@ -35,7 +35,8 @@
 
         <div class="components col-md-12 mb20">
           <div class="components-item col-md-4">
-            <%= link_to modules_employee_path do %>
+            <%#= link_to modules_employee_path do %>
+            <%= link_to '#' do %>
                 <%= image_tag('icon.svg', width: 45) %>
                 <h3 class="title title-h3">Employee</h3>
             <% end %>
@@ -45,23 +46,24 @@
               Employee Data, including Advances, Advances History, Certificates, Right Access etc.<br>
             </p>
 
-            <div class="btn-dual">
+<!--            <div class="btn-dual">-->
               <%#= link_to modules_employee_path, class: 'btn-outline gray-btn mr10' do %>
-              <%= link_to '#', class: 'btn-outline gray-btn mr10' do %>
-                  LEARN MORE
-                  <i class="fa fa-play-circle icon-extra-small"></i>
-              <% end %>
+              <%#= link_to '#', class: 'btn-outline gray-btn mr10' do %>
+<!--                  LEARN MORE-->
+<!--                  <i class="fa fa-play-circle icon-extra-small"></i>-->
+              <%# end %>
               <%#= link_to watch_video_path('employee'), remote: true, class: 'btn-outline gray-btn' do %>
-              <%= link_to '#', remote: true, class: 'btn-outline gray-btn' do %>
-                  WATCH VIDEO
-                  <i class="fa fa-play-circle icon-extra-small"></i>
-              <% end %>
-            </div>
+              <%#= link_to '#', remote: true, class: 'btn-outline gray-btn' do %>
+<!--                  WATCH VIDEO-->
+<!--                  <i class="fa fa-play-circle icon-extra-small"></i>-->
+              <%# end %>
+<!--            </div>-->
 
           </div>
           <div class="components-item col-md-4">
             <!--<i class="fa fa-hand-pointer-o"></i>-->
-            <%= link_to modules_leave_path do %>
+            <%#= link_to modules_leave_path do %>
+            <%= link_to '#' do %>
                 <%= image_tag('icon.svg', width: 45) %>
                 <h3 class="title title-h3">Leave</h3>
             <% end %>
@@ -70,22 +72,23 @@
               a paper based leave history or leave application form.<br>
             </p>
 
-            <div class="btn-dual">
+<!--            <div class="btn-dual">-->
               <%#= link_to modules_leave_path, class: 'btn-outline gray-btn mr10' do %>
-              <%= link_to '#', class: 'btn-outline gray-btn mr10' do %>
-                  LEARN MORE
-                  <i class="fa fa-play-circle icon-extra-small"></i>
-              <% end %>
+              <%#= link_to '#', class: 'btn-outline gray-btn mr10' do %>
+<!--                  LEARN MORE-->
+<!--                  <i class="fa fa-play-circle icon-extra-small"></i>-->
+              <%# end %>
               <%#= link_to watch_video_path('leave'), remote: true, class: 'btn-outline gray-btn' do %>
-              <%= link_to '#', remote: true, class: 'btn-outline gray-btn' do %>
-                  WATCH VIDEO
-                  <i class="fa fa-play-circle icon-extra-small"></i>
-              <% end %>
-            </div>
+              <%#= link_to '#', remote: true, class: 'btn-outline gray-btn' do %>
+<!--                  WATCH VIDEO-->
+<!--                  <i class="fa fa-play-circle icon-extra-small"></i>-->
+              <%# end %>
+<!--            </div>-->
           </div>
           <div class="components-item col-md-4">
             <!--<i class="fa fa-refresh"></i>-->
-            <%= link_to modules_attendance_path do %>
+            <%#= link_to modules_attendance_path do %>
+            <%= link_to '#' do %>
                 <%#= image_tag('module_settings/attendance.png', width: 45) %>
                 <%= image_tag('icon.svg', width: 45) %>
                 <h3 class="title title-h3">Attendance</h3>
@@ -97,25 +100,26 @@
               Company or in a related group of Institution. Online activity is<br>
             </p>
 
-            <div class="btn-dual">
-              <%= link_to '#', class: 'btn-outline gray-btn mr10' do %>
+<!--            <div class="btn-dual">-->
+              <%#= link_to '#', class: 'btn-outline gray-btn mr10' do %>
               <%#= link_to modules_attendance_path, class: 'btn-outline gray-btn mr10' do %>
-                  LEARN MORE
-                  <i class="fa fa-play-circle icon-extra-small"></i>
-              <% end %>
+<!--                  LEARN MORE-->
+<!--                  <i class="fa fa-play-circle icon-extra-small"></i>-->
+              <%# end %>
               <%#= link_to watch_video_path('attendance'), remote: true, class: 'btn-outline gray-btn' do %>
-              <%= link_to '#', remote: true, class: 'btn-outline gray-btn' do %>
-                  WATCH VIDEO
-                  <i class="fa fa-play-circle icon-extra-small"></i>
-              <% end %>
-            </div>
+              <%#= link_to '#', remote: true, class: 'btn-outline gray-btn' do %>
+<!--                  WATCH VIDEO-->
+<!--                  <i class="fa fa-play-circle icon-extra-small"></i>-->
+              <%# end %>
+<!--            </div>-->
           </div>
         </div>
 
         <div class="components col-md-12 mb20">
           <div class="components-item col-md-4">
             <!--<i class="fa fa-fonticons"></i>-->
-            <%= link_to modules_payroll_path do %>
+            <%#= link_to modules_payroll_path do %>
+            <%= link_to '#' do %>
                 <%#= image_tag('module_settings/payroll.png', width: 45) %>
                 <%= image_tag('icon.svg', width: 45) %>
                 <h3 class="title title-h3">Payroll</h3>
@@ -125,23 +129,24 @@
               lots of standard reports like department wise gross salary,<br>
             </p>
 
-            <div class="btn-dual">
+<!--            <div class="btn-dual">-->
               <%#= link_to modules_payroll_path, class: 'btn-outline gray-btn mr10' do %>
-              <%= link_to '#', class: 'btn-outline gray-btn mr10' do %>
-                  LEARN MORE
-                  <i class="fa fa-play-circle icon-extra-small"></i>
-              <% end %>
+              <%#= link_to '#', class: 'btn-outline gray-btn mr10' do %>
+<!--                  LEARN MORE-->
+<!--                  <i class="fa fa-play-circle icon-extra-small"></i>-->
+              <%# end %>
               <%#= link_to watch_video_path('payroll'), remote: true, class: 'btn-outline gray-btn' do %>
-              <%= link_to '#', remote: true, class: 'btn-outline gray-btn' do %>
-                  WATCH VIDEO
-                  <i class="fa fa-play-circle icon-extra-small"></i>
-              <% end %>
-            </div>
+              <%#= link_to '#', remote: true, class: 'btn-outline gray-btn' do %>
+<!--                  WATCH VIDEO-->
+<!--                  <i class="fa fa-play-circle icon-extra-small"></i>-->
+              <%# end %>
+<!--            </div>-->
 
           </div>
           <div class="components-item col-md-4">
             <!--<i class="fa fa-hand-pointer-o"></i>-->
-            <%= link_to modules_provident_fund_path do %>
+            <%#= link_to modules_provident_fund_path do %>
+            <%= link_to '#' do %>
                 <%#= image_tag('module_settings/provident_fund.png', width: 45) %>
                 <%= image_tag('icon.svg', width: 45) %>
                 <h3 class="title title-h3">Provident Fund</h3>
@@ -151,22 +156,23 @@
               all information starting form recruitment till final settlement at one click.<br>
             </p>
 
-            <div class="btn-dual">
+<!--            <div class="btn-dual">-->
               <%#= link_to modules_provident_fund_path, class: 'btn-outline gray-btn mr10' do %>
-              <%= link_to '#', class: 'btn-outline gray-btn mr10' do %>
-                  LEARN MORE
-                  <i class="fa fa-play-circle icon-extra-small"></i>
-              <% end %>
+              <%#= link_to '#', class: 'btn-outline gray-btn mr10' do %>
+<!--                  LEARN MORE-->
+<!--                  <i class="fa fa-play-circle icon-extra-small"></i>-->
+              <%# end %>
               <%#= link_to watch_video_path('provident_fund'), remote: true, class: 'btn-outline gray-btn' do %>
-              <%= link_to '#', remote: true, class: 'btn-outline gray-btn' do %>
-                  WATCH VIDEO
-                  <i class="fa fa-play-circle icon-extra-small"></i>
-              <% end %>
-            </div>
+              <%#= link_to '#', remote: true, class: 'btn-outline gray-btn' do %>
+<!--                  WATCH VIDEO-->
+<!--                  <i class="fa fa-play-circle icon-extra-small"></i>-->
+              <%# end %>
+<!--            </div>-->
           </div>
           <div class="components-item col-md-4">
             <!--<i class="fa fa-refresh"></i>-->
-            <%= link_to modules_expense_path do %>
+            <%#= link_to modules_expense_path do %>
+            <%= link_to '#' do %>
                 <%#= image_tag('module_settings/expense.png', width: 45) %>
                 <%= image_tag('icon.svg', width: 45) %>
                 <h3 class="title title-h3">Expense</h3>
@@ -178,18 +184,18 @@
               allow you to monitor costs before your employees actually<br>
             </p>
 
-            <div class="btn-dual">
+<!--            <div class="btn-dual">-->
               <%#= link_to modules_expense_path, class: 'btn-outline gray-btn mr10' do %>
-              <%= link_to '#', class: 'btn-outline gray-btn mr10' do %>
-                  LEARN MORE
-                  <i class="fa fa-play-circle icon-extra-small"></i>
-              <% end %>
+              <%#= link_to '#', class: 'btn-outline gray-btn mr10' do %>
+<!--                  LEARN MORE-->
+<!--                  <i class="fa fa-play-circle icon-extra-small"></i>-->
+              <%# end %>
               <%#= link_to watch_video_path('expense'), remote: true, class: 'btn-outline gray-btn' do %>
-              <%= link_to '#', remote: true, class: 'btn-outline gray-btn' do %>
-                  WATCH VIDEO
-                  <i class="fa fa-play-circle icon-extra-small"></i>
-              <% end %>
-            </div>
+              <%#= link_to '#', remote: true, class: 'btn-outline gray-btn' do %>
+<!--                  WATCH VIDEO-->
+<!--                  <i class="fa fa-play-circle icon-extra-small"></i>-->
+              <%# end %>
+<!--            </div>-->
           </div>
         </div>
       </div>
@@ -198,7 +204,7 @@
 
   <div id="all-about-free" class="clearfix">
     <h1 class="free-quate">
-      It's All About <b>FREE!</b> <br/>
+      Let's <b>SEE!</b> <br/>
     </h1>
     <a class="btn btn-warning btn-get-start" href="/registration">
       GET STARTED NOW!
@@ -293,20 +299,20 @@
                   </div>
                 </div>
 
-                <script type="text/javascript">
-                    var onloadCallback = function () {
-                        grecaptcha.render('g_recaptcha', {
-                            'sitekey': '6LcZ8xEUAAAAAJxRTPhrnRslryX_mbXYjkoFTOf1'
-                        });
-                    };
-                </script>
+<!--                <script type="text/javascript">-->
+<!--                    var onloadCallback = function () {-->
+<!--                        grecaptcha.render('g_recaptcha', {-->
+<!--                            'sitekey': '6LcZ8xEUAAAAAJxRTPhrnRslryX_mbXYjkoFTOf1'-->
+<!--                        });-->
+<!--                    };-->
+<!--                </script>-->
                 <div id="g_recaptcha" class="pl14"></div>
                 <div class="col-xs-12 text-right">
                   <%= f.submit 'SUBMIT', class: 'custom-button', id: 'send-us-quote-submit-btn' %>
                 </div>
             <% end %>
           </div>
-          <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
+<!--          <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>-->
         </div>
       </div>
     </div>
@@ -344,7 +350,7 @@
           };
           map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);
           marker = new google.maps.Marker({map: map, position: new google.maps.LatLng(23.8247254, 90.3648627)});
-          infowindow = new google.maps.InfoWindow({content: '<strong>MHR</strong><br>Mirpur-12, Pallabi, Road No-03, House No-92<br>'});
+          infowindow = new google.maps.InfoWindow({content: '<strong>MHR</strong><br> Darur Rashad Madrasa Complex, Pallabi, Dhaka<br>'});
           google.maps.event.addListener(marker, 'click', function () {
               infowindow.open(map, marker);
           });
