--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -56,15 +56,14 @@
             <i class="fa fa-map-marker"></i>
 
             <p>
-              Flat #301 (2nd-floor), House #321,
-              Road #04, Mirpur DOHS, Dhaka 1216
+              Darur Rashad Madrasa Complex, Pallabi, Dhaka
             </p>
           </li>
           <li>
             <i class="fa fa-phone"></i>
 
             <p>
-              +8801759408174
+              +8801972109794
             </p>
           </li>
           <li>
@@ -176,7 +175,7 @@
   <div class="copyright-footer">
     <div class="container">
       <div class="row">
-        <div class="textwidget">HR<span>M</span> | &copy; <%= Date.today.year %>
+        <div class="textwidget"><span>M</span>HR | &copy; <%= Date.today.year %>
           <a href="http://mihisoft.com/" target="_blank" class="primary-link-style">Mihisoft Technologies Ltd.</a>, All rights reserved
           <%= link_to 'Privacy & Policy', terms_and_conditions_path, target: '_blank' %>
         </div>
