module icon changed

--- a/app/views/home/_landing.html.erb
+++ b/app/views/home/_landing.html.erb
@@ -37,7 +37,9 @@
           <div class="components-item col-md-4">
             <%#= link_to modules_employee_path do %>
             <%= link_to '#' do %>
-                <%= image_tag('icon.svg', width: 45) %>
+                <%#= image_tag('icon.svg', width: 45) %>
+              <%= image_tag('module-common.png', class:'module-common') %>
+
                 <h3 class="title title-h3">Employee</h3>
             <% end %>
 
@@ -64,7 +66,7 @@
             <!--<i class="fa fa-hand-pointer-o"></i>-->
             <%#= link_to modules_leave_path do %>
             <%= link_to '#' do %>
-                <%= image_tag('icon.svg', width: 45) %>
+                <%= image_tag('module-common.png', class:'module-common') %>
                 <h3 class="title title-h3">Leave</h3>
             <% end %>
             <p class="text-left">
@@ -90,7 +92,7 @@
             <%#= link_to modules_attendance_path do %>
             <%= link_to '#' do %>
                 <%#= image_tag('module_settings/attendance.png', width: 45) %>
-                <%= image_tag('icon.svg', width: 45) %>
+                <%= image_tag('module-common.png', class:'module-common') %>
                 <h3 class="title title-h3">Attendance</h3>
             <% end %>
 
@@ -121,7 +123,7 @@
             <%#= link_to modules_payroll_path do %>
             <%= link_to '#' do %>
                 <%#= image_tag('module_settings/payroll.png', width: 45) %>
-                <%= image_tag('icon.svg', width: 45) %>
+                <%= image_tag('module-common.png', class:'module-common') %>
                 <h3 class="title title-h3">Payroll</h3>
             <% end %>
             <p class="text-left">
@@ -148,7 +150,7 @@
             <%#= link_to modules_provident_fund_path do %>
             <%= link_to '#' do %>
                 <%#= image_tag('module_settings/provident_fund.png', width: 45) %>
-                <%= image_tag('icon.svg', width: 45) %>
+                <%= image_tag('module-common.png', class:'module-common') %>
                 <h3 class="title title-h3">Provident Fund</h3>
             <% end %>
             <p class="text-left">
@@ -174,7 +176,7 @@
             <%#= link_to modules_expense_path do %>
             <%= link_to '#' do %>
                 <%#= image_tag('module_settings/expense.png', width: 45) %>
-                <%= image_tag('icon.svg', width: 45) %>
+                <%= image_tag('module-common.png', class:'module-common') %>
                 <h3 class="title title-h3">Expense</h3>
             <% end %>
 
